<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">EatAway Merchant</string>
    <string name="you_feng">河北优枫网络科技有限公司</string>
    <string name="ban_ben_hao">版本号</string>

    <!--打印机需要-->
    <string name="toast_1">事务打印请使用Aidl模式!</string>
    <string name="toast_2">服务已断开!</string>
    <string name="toast_3">蓝牙设备不可用</string>
    <string name="toast_4">未检测到蓝牙设备，请打开蓝牙</string>
    <string name="toast_5">未发现InnterPrinter!</string>
    <string name="toast_6">蓝牙连接失败!</string>

    <string name="xiu_gai_shi_bai_qing_shua_xin">修改失败，请重新尝试进入修改</string>
    <string name="text_loading">正在加载中...</string>
    <string name="cai_dan_shun_xu">菜单顺序</string>

    <string name="xing_qi_yi">星期一</string>
    <string name="xing_qi_er">星期二</string>
    <string name="xing_qi_san">星期三</string>
    <string name="xing_qi_si">星期四</string>
    <string name="xing_qi_wu">星期五</string>
    <string name="xing_qi_liu">星期六</string>
    <string name="xing_qi_qi">星期天</string>
    <string name="xing_qi_all">默认营业时间</string>
    <string name="qing_tian_xie_wan_zheng_she_zhi_xin_xi">请输入完整设置信息</string>
    <string name="qing_zhu_yi_ci_ci_she_zhi_jiang_hui_fu_gai">注意此次设置会覆盖其余所有营业，请谨慎操作!</string>

    <string name="tui_dan_title">申请退单</string>
    <string name="Refund_my">确认退单</string>
    <string name="que_ren_song_da_ma">确认送达吗？</string>
    <string name="tui_dan_content">申请退单前请先和下单用户进行沟通，确认退单后，我们会在3–5个工作日进行退款</string>
    <string name="mei_you_shu_ju_le">没有数据了</string>
    <string name="dian_ji_jia_zai">点击加载</string>
    <string name="tui_dan_zhong">退单中</string>
    <string name="password_again">请再次输入密码</string>
    <string name="exit">退出账号</string>
    <string name="yi_tui_dan">已退单</string>
    <string name="mei_shou_ru">您当前没有收入哦</string>
    <string name="mei_ping_jia">您当前没有评价哦</string>
    <string name="yong_hu_xie_yi">用户协议</string>
    <string name="protocol_title">RESTAURANT</string>
    <string name="title_small">EATAWAY MOBILE APPLICATION TERMS AND CONDITIONS</string>
    <string name="title_small_s">Restaurant Agreement</string>
    <string name="yi_xia_jia">上架</string>
    <string name="mi_ma_chang_du">密码长度不能小于6位</string>
    <string name="xiu_gai_cai_dan">修改菜单名称</string>
    <string name="qing_shu_ru_xiu_gai_ming_cheng">请输入修改名称</string>
    <string name="xuan_ze_zhi_fu_fang_shi">选择支付方式</string>
    <string name="fan_kui_shi_bai">反馈失败</string>
    <string name="fan_kui_cheng_gong">反馈成功</string>
    <string name="dang_qian_yu_yan">当前语言</string>
    <string name="dian_pu_jie_shao">店铺介绍</string>
    <string name="zheng_zai_shang_chuan">正在上传，请稍后</string>
    <string name="yi_dao_zhang">已到账</string>
    <string name="nei_rong_bu_neng_wei_kong">内容不能为空</string>
    <string name="shang_chuan_tu_pian_bu_neng_wei_kong">上传图片不能为空</string>
    <string name="ying_ye_zhuang_tai">营业状态</string>
    <string name="ting_zhi_ying_ye">停止营业</string>
    <string name="dang_qian_wu_ding_dan">当前无订单</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="enter_the_captcha">请输入验证码</string>
    <string name="please_enter_the_cell_phone_number">请输入手机号</string>
    <string name="please_enter_the_password">请输入密码</string>
    <string name="please_confirm_the_password">请确认密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="click_login">点击登录</string>
    <string name="click_release">点此注册</string>
    <string name="release">注  册</string>
    <string name="login">登 录</string>
    <string name="read_and_agreed">我已阅读并同意</string>
    <string name="the_terms_of_service">&#060;EatAway服务条款&#062;</string>
    <string name="EN">EN</string>
    <string name="chinese">中</string>
    <string name="get_the_captcha_successfully">获取验证码成功</string>
    <string name="please_enter_the_verification_code">请输入验证码</string>
    <string name="the_password_input_is_inconsistent_twice">两次密码输入不一致</string>
    <string name="please_check_your_network_connection">请检查您的网络连接</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_successful">登陆成功</string>
    <string name="validation_fails">验证失败</string>
    <string name="release_failed">注册失败</string>
    <string name="release_successful">注册成功</string>
    <string name="The_phone_number_has_been_registered">该手机号已被注册</string>
    <string name="The_phone_number_cannot_empty">手机号不能为空</string>
    <string name="Enter_empty">输入为空!</string>
    <string name="Format_error">号码格式错误</string>
    <string name="Number_registered">号码已被注册</string>
    <string name="Linked_this_phone_number">该手机号与当前绑定的手机号相同</string>
    <string name="Request_location_permission">申请定位权限，以便获取您的位置</string>
    <string name="Request_Photo_permission">申请定位权限，以便获取您的位置</string>
    <string name="Please_Log_on_again">登陆失效，请重新登录</string>
    <string name="deng_lu_xin_xi_bu_neng_wei_kong">登陆信息不能为空</string>

    <!--短信验证码-->
    <string name="chong_xin_fa_song">重新发送</string>
    <string name="zhu_ce_xin_xi_bu_neng_wei_kong">注册信息不能为空</string>
    <string name="ding_dan_guan_li">订单管理</string>
    <string name="cai_dan_guan_li">菜单管理</string>
    <string name="ping_lun">评论</string>
    <string name="shang_jia_xin_xi">商家信息</string>
    <string name="wei_chu_li">未处理</string>
    <string name="yi_wan_cheng">已完成</string>
    <string name="xia_dan_shi_jian">下单时间</string>
    <string name="song_da_shi_jian">送达时间</string>
    <string name="kou_wei_bei_zhu">口味备注:</string>
    <string name="ding_dan_hao">订单号:</string>
    <string name="pei_song_fei">配送费</string>
    <string name="zui_di_pei_song_jin_e">最低配送金额</string>
    <string name="pei_song_ju_li">配送距离</string>
    <string name="zong_ji">总计</string>
    <string name="shen_qing_tui_dan">申请退单</string>
    <string name="shen_qing_tui_dan_info">申请退单前请先和下单用户进行沟通，确认退单后，我们会在3–5个工作日进行退款</string>
    <string name="jie_dan">接单</string>
    <string name="que_ren_song_da">确认送达</string>
    <string name="huo_qu_shi_bai">获取失败</string>

    <string name="text_ok">确认</string>
    <string name="text_cancel">取消</string>
    <string name="text_delete">删除</string>

    <string name="shi_fou_ying_ye">是否营业</string>
    <string name="shou_ru_ming_xi">收入明细</string>
    <string name="ren_zheng_zhuang_tai">认证状态</string>
    <string name="xi_tong_she_zhi">系统设置</string>
    <string name="wen_ti_fan_kui">问题反馈</string>
    <string name="xiao_shou_e">销售额</string>
    <string name="ding_dan_shu">订单数</string>
    <string name="xin_zeng_cai_dan">新增菜单</string>
    <string name="tian_jia_cai_pin">添加菜品</string>
    <string name="xiu_gai_cai_pin">修改菜品</string>
    <string name="qing_shu_ru_xin_zeng_jia_de_cai_dan">请输入新增加的菜单</string>
    <string name="qing_shu_ru_cai_pin_ming_cheng">请输入菜品名称</string>
    <string name="qing_shu_ru_cai_dan_jia_ge">请输入菜品价格</string>
    <string name="cai_pin_jie_shao">菜品介绍</string>
    <string name="xuan_tian">选填</string>
    <string name="li_zhe_shi">例:这是店里的新菜，欢迎品尝！</string>
    <string name="wan_cheng">完成</string>
    <string name="cai_pin_ming_cheng">菜品名称</string>
    <string name="cai_pin_jia_ge">菜品价格</string>
    <string name="yi_shou">份已售</string>
    <string name="cai_dan">菜单</string>
    <string name="yi_shou_wan">已售完</string>
    <string name="tian_jia_cheng_gong">添加成功</string>
    <string name="xiu_gai_ming_cheng">修改名称</string>
    <string name="shan_chu_cai_dan">删除菜单</string>
    <string name="xiu_gai_cheng_gong">修改成功</string>
    <string name="shan_chu_cheng_gong">删除成功</string>
    <string name="shan_chu_shi_bai">删除失败</string>
    <string name="qing_xian_shan_chu_shang_pin">先删除该类别下所有商品</string>

    <!--商家回复-->
    <string name="hui_fu">商家回复</string>
    <string name="qing_shu_ru_nin_de_hui_fu">请输入您的回复</string>
    <!--意见反馈-->
    <string name="thank_you_for_comments">反馈成功，感谢您提供的宝贵意见</string>
    <string name="content_cannot_be_empty">内容不能为空</string>
    <string name="Publication">发表反馈</string>
    <string name="Give_FeedBack_here">您有什么意见或建议，可在此反馈</string>
    <string name="Give_FeedBack_unsuccessfully">反馈失败！</string>
    <!--商家详情-->
    <string name="mo_ren_biao_yu">食尽美味，品出家珍</string>
    <string name="qing_she_zhi_ying_ye_shi_jian">请设置营业时间</string>
    <string name="xiu_gai_dian_pu_zhu_tu">修改店铺主图</string>
    <!--商家设置-->
    <string name="xiu_gai_shang_jia_xin_xi">修改商家信息</string>
    <string name="fan_dian_ming_cheng">店铺名称</string>
    <string name="qing_shu_ru_fan_dian_ming_cheng">请输入店铺名称</string>
    <string name="fan_dian_jie_shao">店铺介绍</string>
    <string name="qing_shu_ru_fan_dian_jie_shao">请输入店铺介绍</string>
    <string name="ying_ye_shi_jian">营业时间</string>
    <string name="kai_shi_shi_jian">开始时间</string>
    <string name="jie_shu_shi_jian">结束时间</string>
    <string name="kai_shi_shi_jian_xuan">开始时间（选填）</string>
    <string name="jie_shu_shi_jian_xuan">结束时间（选填）</string>
    <string name="wei_ren_zheng">未认证</string>
    <string name="ren_zheng_zhong">认证中</string>
    <string name="yi_ren_zheng">已认证</string>
    <string name="lian_xi_fang_shi">联系方式</string>
    <string name="qing_shu_ru_lian_xi_fang_shi">请输入联系方式</string>
    <string name="dian_pu_wei_zhi">店铺位置</string>
    <string name="qing_shu_ru_dian_pu_di_zhi">请输入店铺地址</string>
    <string name="tui_chu_jia_meng">退出加盟</string>
    <string name="hai_mei_deng_dao_ping_tai_ren_yuan">还没等到平台人员?</string>
    <string name="lian_xi_wo_men">联系我们</string>
    <string name="shang_chuan_tou_xiang">上传头像</string>
    <string name="shang_chuan_zhu_tu">上传主图</string>
    <string name="token_yan_zheng_shi_bai">登陆信息过期,请重新登录</string>

    <string name="qing_xuan_ze_ni_de_cheng_shi">城市</string>
    <string name="qing_xuan_ze_ni_de_jie_dao">街道</string>
    <string name="qing_shu_ru_nin_de_xiang_xi_wei_zhi">请输入您的详细位置</string>
    <string name="a_de_lai_de">阿德莱德</string>
    <string name="nin_dang_qian_de_zhang_hao_zheng_zai_yan_zheng_zhong">您当前的账号正在认证中</string>
    <string name="wei_deng_lu">登录/注册</string>
    <string name="nin_dang_qian_hai_wei_deng_lu">您当前还未登陆</string>
    <string name="yi_jian_fan_kui">意见反馈</string>
    <string name="qing_qiu_cheng_gong">请求成功</string>
    <string name="qing_qiu_shi_bai">请求失败</string>
    <string name="nin_dan_qian_de_zhao_hao_zheng_zai_shen_he">您当前的账号正在审核中，如有问题请与我们联系</string>
    <string name="shen_he_zhong">审核中</string>
    <string name="xiu_gai_shi_bai">修改失败，请重试</string>
    <string name="xiu_gai_shou_ji_hao">修改手机号</string>
    <string name="pei_song_shi_jian">配送时间</string>
    <string name="max_price_start">满</string>
    <string name="max_price_end">免配送费</string>
    <string name="min_distance_start">在</string>
    <string name="min_distance_end">内</string>
    <string name="qing_shu_ru_xiu_gai_xin_xi">请输入修改信息</string>
    <string name="pei_song_gui_ze">配送规则</string>
    <string name="zui_xiao_jin_e">满多少钱免配送费</string>
    <string name="zui_da_ju_li">多少距离以内多少配送费</string>
    <string name="nin_dang_qian_hai_wei_ren_zheng">您当前还未认证</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="qing_shu_ru_huan_bang_shou_ji_hao">输入您要绑定的手机号</string>
    <string name="code">验证码</string>
    <string name="send">发送</string>
    <string name="person_resend">重新发送</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="cheng_shi">城市</string>
    <string name="qing_xuan_ze_nin_de_di_zhi">请选择您的所在地址</string>
    <string name="di_zhi_bu_chong">地址补充(选填)</string>
    <string name="xuan_ze_di_zhi">选择地址</string>
    <string name="tian_jia_pei_song_gui_ze">添加配送规则</string>
    <string name="guan_yu_wo_men">关于我们</string>
    <string name="sign_out">退出账号</string>
    <string name="zhao_hui_mi_ma">找回密码</string>
    <string name="chong_zhi_mi_ma">重置密码</string>
    <string name="hui_fu_cheng_gong">回复成功</string>
    <string name="hui_fu_shi_bai">回复失败</string>
    <string name="gai_shou_ji_wei_zhu_ce">该手机号未注册</string>
    <string name="chang_shi_jian_wei_cao_zuo_gai">由于您长时间未操作，该订单已自动退单</string>
</resources>
