<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_line"
    android:orientation="vertical"
    tools:context="com.administrator.administrator.eataway.activity.TimeListActivity">
    <com.administrator.administrator.eataway.view.TopBar
        android:id="@+id/tb_time_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_all"
        android:text="@string/xing_qi_all"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:id="@+id/tv_monday"
        android:text="@string/xing_qi_yi"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:id="@+id/tv_tuesday"
        android:text="@string/xing_qi_er"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:id="@+id/tv_wednesday"
        android:text="@string/xing_qi_san"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:id="@+id/tv_thurday"
        android:text="@string/xing_qi_si"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:id="@+id/tv_friday"
        android:text="@string/xing_qi_wu"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:id="@+id/tv_saturday"
        android:text="@string/xing_qi_liu"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:id="@+id/tv_sunday"
        android:text="@string/xing_qi_qi"
        android:padding="15dp"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/icon_more_gray"
        android:layout_marginBottom="1dp"/>
</LinearLayout>
