<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    tools:context="com.administrator.administrator.eataway.activity.CertificationActivity">
    <com.administrator.administrator.eataway.view.TopBar
        android:id="@+id/tp_certification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <RelativeLayout android:id="@+id/rl_activity_certification_shop_name"
        style="@style/PersonPageList">
        <TextView
            android:text="@string/fan_dian_ming_cheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_activity_certification_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="韩式烤肉拌饭"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_activity_certification_shop_type"
        style="@style/PersonPageList">
        <TextView
            android:text="@string/ren_zheng_zhuang_tai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_activity_certification_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/wei_ren_zheng"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_activity_certification_phone"
        style="@style/PersonPageList">
        <TextView
            android:text="@string/lian_xi_fang_shi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_activity_certification_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="1234567"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_activity_certification_shop_location"
        style="@style/PersonPageList">
        <TextView
            android:text="@string/dian_pu_wei_zhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_activity_certification_location"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="000000"
            android:lines="1"
            android:ellipsize="end"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <Button
            android:id="@+id/btn_activity_certification_sign_out"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_red"
            android:text="@string/tui_chu_jia_meng"
            android:textAllCaps="false"
            android:textColor="@color/color_white"/>
        <TextView
            android:id="@+id/tv_activity_certification_contack"
            android:text="@string/lian_xi_wo_men"
            android:textColor="@color/color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_activity_certification_sign_out"
            android:layout_alignParentRight="true"/>
        <TextView
            android:text="@string/hai_mei_deng_dao_ping_tai_ren_yuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/tv_activity_certification_contack"
            android:layout_alignBottom="@id/tv_activity_certification_contack"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_gray"/>
    </RelativeLayout>

</LinearLayout>
