<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.administrator.administrator.eataway.activity.CertificationUpActivity">
    <com.administrator.administrator.eataway.view.TopBar
        android:id="@+id/tp_certification_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <RelativeLayout android:id="@+id/rl_activity_certification_up_shop_name"
        style="@style/PersonPageList">
        <TextView
            android:id="@+id/tv_certification_up_shop_name"
            android:text="@string/fan_dian_ming_cheng"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
        <EditText
            android:id="@+id/tv_activity_certification_shop_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_certification_up_shop_name"
            android:hint="@string/qing_shu_ru_fan_dian_ming_cheng"
            android:textColorHint="@color/text_gray"
            android:textSize="15sp"
            android:background="@color/color_white"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_activity_certification_up_shop_phone"
        style="@style/PersonPageList">
        <TextView
            android:id="@+id/tv_certification_up_shop_phone"
            android:text="@string/lian_xi_fang_shi"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
        <EditText
            android:id="@+id/tv_activity_certification_shop_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_certification_up_shop_phone"
            android:hint="@string/qing_shu_ru_lian_xi_fang_shi"
            android:textColorHint="@color/text_gray"
            android:textSize="15sp"
            android:background="@color/color_white"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_activity_certification_up_shop_location"
        style="@style/PersonPageList">
        <TextView
            android:id="@+id/tv_certification_up_shop_location"
            android:text="@string/dian_pu_wei_zhi"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/tv_activity_certification_shop_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_certification_up_shop_location"
            android:text="@string/qing_shu_ru_dian_pu_di_zhi"
            android:textColorHint="@color/text_gray"
            android:textSize="15sp"
            android:background="@color/color_white"/>
        <ImageView style="@style/PersonPageMoreIcon"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_activity_certification_up_shop_icon"
        style="@style/PersonPageList">
        <TextView
            android:id="@+id/tv_certification_up_shop_icon"
            android:text="@string/shang_chuan_tou_xiang"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
        <ImageView android:id="@+id/iv_certification_up_more1"
            style="@style/PersonPageMoreIcon"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cimg_activity_certification_up_shop_icon"
            android:layout_toLeftOf="@id/iv_certification_up_more1"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_activity_certification_up_shop_pic"
        style="@style/PersonPageList">
        <TextView
            android:id="@+id/tv_certification_up_shop_pic"
            android:text="@string/shang_chuan_zhu_tu"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"/>
        <ImageView android:id="@+id/iv_certification_up_more2"
            style="@style/PersonPageMoreIcon"/>
        <ImageView
            android:id="@+id/img_activity_certification_up_shop_pic"
            android:layout_toLeftOf="@id/iv_certification_up_more2"
            android:layout_width="25dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_activity_certification_ok"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/text_ok"
        android:textColor="@color/color_white"
        android:background="@drawable/shape_orange"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>
</LinearLayout>
