<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="com.administrator.administrator.eataway.activity.LoginActivity">
    <com.administrator.administrator.eataway.view.TopBar
        android:id="@+id/tp_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:background="@drawable/img_logo"
            android:layout_width="70dp"
            android:layout_height="70dp" />
        <TextView
            android:text="EatAway"
            android:textSize="15sp"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout style="@style/LoginPage_LinearLayout"
        android:layout_marginBottom="10dp">
        <ImageView
            android:background="@drawable/img_icon_user"
            android:layout_width="@dimen/login_item_size"
            android:layout_height="@dimen/login_item_size"
            android:layout_marginRight="20dp"/>
        <EditText
            android:inputType="number"
            android:id="@+id/et_activity_release_usernum"
            android:hint="@string/please_enter_the_cell_phone_number"
            style="@style/LoginPage_EditText"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/login_item_margin"
        android:layout_marginRight="@dimen/login_item_margin"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_gray"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/iv_activity_release_code"
            android:background="@drawable/img_icon_code"
            android:layout_width="@dimen/login_item_size"
            android:layout_height="@dimen/login_item_size"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>
        <EditText
            android:inputType="number"
            android:id="@+id/et_activity_release_code"
            android:hint="@string/please_enter_the_verification_code"
            style="@style/LoginPage_EditText"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_activity_release_code"/>
        <Button
            android:id="@+id/btn_activity_release_code"
            android:text="@string/get_verification_code"
            android:textColor="@color/color_white"
            android:textSize="10sp"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_gray_half_corner_default"
            android:layout_alignParentRight="true"
            android:textAllCaps="false"/>
    </RelativeLayout>
    <LinearLayout style="@style/LoginPage_LinearLayout"
        android:layout_marginBottom="10dp">
        <ImageView
            android:background="@drawable/img_icon_password"
            android:layout_width="@dimen/login_item_size"
            android:layout_height="@dimen/login_item_size"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/et_activity_release_password"
            android:inputType="textPassword"
            android:hint="@string/please_enter_the_password"
            style="@style/LoginPage_EditText"/>
    </LinearLayout>
    <LinearLayout style="@style/LoginPage_LinearLayout">
        <ImageView
            android:background="@drawable/img_icon_password"
            android:layout_width="@dimen/login_item_size"
            android:layout_height="@dimen/login_item_size"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/et_activity_release_confirm"
            android:inputType="textPassword"
            android:hint="@string/password_again"
            style="@style/LoginPage_EditText"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_item_margin"
        android:layout_marginRight="@dimen/login_item_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/tv_activity_release_click_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_login"
            android:textColor="@color/color_blue"
            android:layout_alignParentRight="true"
            android:textSize="12sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_activity_release_release"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape_blue"
        android:text="@string/release"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/login_item_margin"
        android:layout_marginRight="@dimen/login_item_margin"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_item_margin"
        android:gravity="center_vertical">
        <CheckBox
            android:id="@+id/cb_activity_release_agree"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:button="@null"
            android:background="@drawable/bg_release_cb"
            android:layout_marginRight="5dp"
            android:checked="true"/>
        <TextView
            android:text="@string/read_and_agreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/tv_agree"
            android:text="@string/the_terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/color_blue"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_activity_language"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="@dimen/login_item_margin">
            <TextView
                android:id="@+id/tv_release_zh"
                android:text="@string/chinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_line"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/tv_activity_release_en"
                android:text="@string/EN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
